Added Chat Room Integrated Socket.io Added Questionaire Changed UI

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  height: 80%; 
-  background-color:black;
+  height: 90%; 
+  background-color:white;
   overflow: hidden;
 }
 
