--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,9 @@
 <div class="sidenav">
    <div class="login-main-text">
-      <h1>ViMeet<br> Join Page</h1>
-      <p>Create or Join a Room</p>
+       <h1>ViMeet</h1>
    </div>
-   <div class="description">
-      <h3></h3>
+   <div class="description" style="text-align: center;">
+      <h3>Break Ice & Bond among your<br> co-workers & classmates</h3>
    </div>
 </div>
 <div class="main">
